--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ strike {
 
 .photo-bg {
     /* background-image: url(assets/background.jpg); */
-    background-image: url(https://s3.ax1x.com/2021/01/08/sKufRe.jpg);
+    background-image: url();
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
