--- a/css/nutssss.css
+++ b/css/nutssss.css
@@ -39,7 +39,7 @@ body {
 .headPhoto {
     width: 8rem;
     height: 8rem;
-    background: url(https://s1.ax1x.com/2020/08/10/aqsA9f.png) no-repeat;
+    background: url(https://7.dusays.com/2021/02/05/860b003254b5c.png) no-repeat;
     background-size: cover;
     border-radius: 50%;
     position: relative;
