--- a/assets/css/index3.css
+++ b/assets/css/index3.css
@@ -10,7 +10,7 @@
     }
 }
 #rin-headimg{
-    background-image: url('https://z3.ax1x.com/2021/04/15/cRAaid.png');
+    background-image: url('https://bu.dusays.com/2021/07/21/e43d8338764be.jpg');
     border-radius: 50%;
     height: 150px;
     width:150px;
