--- a/home.css
+++ b/home.css
@@ -10,7 +10,7 @@ html,body {
 }
 
 #banner {
-    background-image: url("https://cdn.jsdelivr.net/npm/ocoke-osg@0.0.6/rawimg/Pnd1XU.jpg");
+    background-image: url("https://fmkli.js.org/places.jpg");
     background-size:cover;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
