--- a/home.css
+++ b/home.css
@@ -10,7 +10,7 @@ html,body {
 }
 
 #banner {
-    background-image: url("https://fmkli.js.org/places.jpg");
+    background-image: url("https://q2.a1pic.cn/2021/12/23/IYXs.jpg");
     background-size:cover;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
