--- a/home.css
+++ b/home.css
@@ -1,1 +1,1 @@
-html,body{width:100vw;height:100vh;margin:0;padding:0}.content-center{margin-right:auto!important;margin-left:auto!important}#banner{background-image:url(https://q3.a1pic.cn/2022/01/15/yA6e.png);background-size:cover;background-repeat:no-repeat;background-attachment:fixed;background-position:center center;
+html,body{width:100vw;height:100vh;margin:0;padding:0}.content-center{}#banner{background-image:url(https://q3.a1pic.cn/2022/01/15/yA6e.png);background-size:cover;background-repeat:no-repeat;background-attachment:fixed;background-position:center center;
