--- a/font.css
+++ b/font.css
@@ -9,10 +9,13 @@
   font-style: normal;
   font-display: block;
 }
+@font-face {
+  font-family: 'hmzt';
+  src: url('./');
+}
 .gd-icon {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'Grass-Design-Icon' !important;
-  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
