--- a/post.css
+++ b/post.css
@@ -18,3 +18,25 @@
     border: 2px solid rgb(151, 151, 151);
     border-radius: 3px;
 }
+.dailong{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+.postlist2{
+    width: calc(100% - 50px);
+	height: 300px;
+	margin: 100px auto;
+	background-color: #fefefe;
+	border-radius: 10px;
+	box-shadow: 0 0 5px 5px darkgray;
+    padding: 10px;
+}
+.listheader{
+    position: fixed;
+    left: calc(100% - 55px);
+}
