--- a/post.css
+++ b/post.css
@@ -26,6 +26,7 @@
 	height: 100%;
 	overflow: auto;
 	background-color: rgba(0, 0, 0, 0.4);
+   	z-index: 9999;     
 }
 .postlist2{
     width: calc(100% - 50px);
