--- a/post.css
+++ b/post.css
@@ -26,11 +26,11 @@
 	height: 100%;
 	overflow: auto;
 	background-color: rgba(0, 0, 0, 0.4);
-   	z-index: 9999;     
+   	z-index: 9990;     
 }
 .postlist2{
     width: calc(100% - 50px);
-	height: 300px;
+	height: calc(100% - 300px);
 	margin: 100px auto;
 	background-color: #fefefe;
 	border-radius: 10px;
