--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     overflow:hidden;
-    background-image: url(https://api.dujin.org/bing/1920.php);
+    background-image: url(../image/places.jpg);
     overflow-y: scroll;
     overflow-x:hidden;
     min-height: 100%;
@@ -9,9 +9,13 @@ body{
     
 }
 .header2333{
-    background-color: #F1F1F1;
     text-align: center;
     padding: 10px;
+    background: rgba( 255, 255, 255, 0.25 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 hr{
     color: #888888;
@@ -32,17 +36,20 @@ a:hover{
 }
 .left{
     float: left;
-    background-color: white;
-    border-radius: 10px;
     padding: 10px;
-    box-shadow: 5px 5px 2px #888888;
     width: 500px;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 #888888;
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 .left:hover{
-    box-shadow: 6px 6px 4px #888888;
+    box-shadow: 0 5px 27px 0 #888888;
 }
 .right:hover{
-    box-shadow: 6px 6px 4px #888888;
+    box-shadow: 0 5px 27px 0 #888888;
 }
 .headimg{
     width: auto;
@@ -52,9 +59,13 @@ a:hover{
 .lianjie{
     width: 90px;
     height: 90px;
-    background-color: rgb(233, 233, 233);
     display: inline-block;
     text-align: center;
+    background: rgba( 255, 255, 255, 0.25 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 .lianjie:hover{
     width: 90px;
@@ -65,15 +76,18 @@ a:hover{
 }
 @media all and (min-width:1290px){
     .right{
-        background-color: white;
-        border-radius: 10px;
         padding: 10px;
         height: auto;
-        box-shadow: 5px 5px 2px #888888;
         width: 520px;
         position: absolute;
         left: 105%;
         top: 0%;
+        background: rgba( 255, 255, 255, 0.25 );
+        box-shadow: 0 8px 32px 0  #888888;
+        backdrop-filter: blur( 4px );
+        -webkit-backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
     .oncard2{
         display: none;
@@ -81,15 +95,18 @@ a:hover{
 }
 @media all and (max-width:1290px) and (min-width:1079px){
     .right{
-        background-color: white;
-        border-radius: 10px;
         padding: 10px;
         height: auto;
-        box-shadow: 5px 5px 2px #888888;
         width: 310px;
         position: absolute;
         left: 105%;
         top: 0%;
+        background: rgba( 255, 255, 255, 0.25 );
+        box-shadow: 0 8px 32px 0  #888888;
+        backdrop-filter: blur( 4px );
+        -webkit-backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
     .oncard2{
         display: none;
@@ -97,15 +114,18 @@ a:hover{
 }
 @media all and (max-width:1079px) and (min-width:759px){
     .right{
-        background-color: white;
-        border-radius: 10px;
         padding: 10px;
         height: auto;
-        box-shadow: 5px 5px 2px #888888;
         width: 500px;
         top: 105%;
         position: absolute;
         left: 0%;
+        background: rgba( 255, 255, 255, 0.25 );
+        box-shadow: 0 8px 32px 0  #888888;
+        backdrop-filter: blur( 4px );
+        -webkit-backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
     .oncard1{
         display: none;
@@ -125,15 +145,18 @@ a:hover{
         left: 2%;
     }
     .right{
-        background-color: white;
-        border-radius: 10px;
         padding: 10px;
         height: auto;
-        box-shadow: 5px 5px 2px #888888;
         width: 480px;
         top: 105%;
         position: absolute;
         left: 0%;
+        background: rgba( 255, 255, 255, 0.25 );
+        box-shadow: 0 8px 32px 0  #888888;
+        backdrop-filter: blur( 4px );
+        -webkit-backdrop-filter: blur( 4px );
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
     .oncard1{
         display: none;
