--- a/css/style.css
+++ b/css/style.css
@@ -193,3 +193,16 @@ a:hover{
         display: none;
     }
 }
+.noscript{
+    text-align: center;
+}
+.dailong{
+    position: fixed;
+    top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(110, 238, 255);
+   	z-index: 9990;  
+}
