--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,21 @@ a:hover{
     .oncard2{
         display: none;
     }
+    .upupzuiup-text{
+        width: 90%;
+        height: 75px;
+        float: left;
+    }
+    .caidananniu{
+        width: 10%;
+        height: 75px;
+        float: left;
+    }
+    .upupzuiup{
+        width: 100%;
+        height: 75px;
+        float: left;
+    }
 }
 @media all and (max-width:1290px) and (min-width:1079px){
     .right{
@@ -118,6 +133,21 @@ a:hover{
     }
     .oncard2{
         display: none;
+    }
+    .upupzuiup-text{
+        width: 90%;
+        height: 75px;
+        float: left;
+    }
+    .caidananniu{
+        width: 10%;
+        height: 75px;
+        float: left;
+    }
+    .upupzuiup{
+        width: 100%;
+        height: 75px;
+        float: left;
     }
 }
 @media all and (max-width:1079px) and (min-width:759px){
@@ -140,6 +170,21 @@ a:hover{
     }
     .aplayer{
         display: none;
+    }
+    .upupzuiup-text{
+        width: 90%;
+        height: 75px;
+        float: left;
+    }
+    .caidananniu{
+        width: 10%;
+        height: 75px;
+        float: left;
+    }
+    .upupzuiup{
+        width: 100%;
+        height: 75px;
+        float: left;
     }
 }
 @media all and (max-width:759px) and (min-width:550px){
@@ -172,13 +217,28 @@ a:hover{
     .aplayer{
         display: none;
     }
+    .upupzuiup-text{
+        width: 90%;
+        height: 75px;
+        float: left;
+    }
+    .caidananniu{
+        width: 10%;
+        height: 75px;
+        float: left;
+    }
+    .upupzuiup{
+        width: 100%;
+        height: 75px;
+        float: left;
+    }
 }
 @media all and (max-width:550px){
     .urlimg{
         display: none;
     }
     .left{
-        width: 338px;
+        width: 100%;
     }
     .shuanglan{
         left: 2%;
@@ -186,7 +246,7 @@ a:hover{
     .right{
         padding: 10px;
         height: auto;
-        width: 338px;
+        width: 100%;
         top: 105%;
         position: absolute;
         left: 0%;
@@ -203,6 +263,82 @@ a:hover{
     .aplayer{
         display: none;
     }
+    .upupzuiup-text{
+        width: 90%;
+        height: calc(10vh);
+        float: left;
+    }
+    .upupzuiup{
+        width: 100%;
+        height: calc(10vh);
+        float: left;
+    }
+    .caidananniu{
+        width: 10%;
+        height: calc(10vh - 1px);
+        float: left;
+    }
+}
+@media all and (max-height:695px){
+    .upupzuiup-text{
+        width: 90%;
+        height: calc(10vh);
+        float: left;
+    }
+    .upupzuiup{
+        width: 100%;
+        height: calc(10vh);
+        float: left;
+    }
+    .caidananniu{
+        width: 10%;
+        height: calc(10vh - 1px);
+        float: left;
+    }
+}
+@media all and (max-height:411px){
+    .upupzuiup-text{
+        font-size:20px;
+    }
+}
+.upupzuiup-text{
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-size:25px;
+}
+.upupzuiup{
+    background-color: rgba(147, 242, 255, 0.596);
+    border: 2px solid rgba(255, 255, 255, 0.61);
+    border-radius: 10px;
+}
+.caidananniu{
+    background-color: rgba(147, 242, 255, 0.596);
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-size:18px;
+}
+.caidananniu:hover{
+    background-color: rgba(147, 242, 255, 0.438);
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-size:18px;
+}
+.caidananniu:active{
+    background-color: rgba(147, 242, 255, 0.377);
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    font-size:18px;
 }
 .noscript{
     text-align: center;
