--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ a:hover{
         float: left;
     }
 }
-@media all and (max-width:1066){
+@media all and (max-width:1066px){
     .qitaanniu{
         display: none;
     }
