--- a/css/style.css
+++ b/css/style.css
@@ -102,26 +102,6 @@ a:hover{
         border-radius: 10px;
         border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
-    .upupzuiup-text{
-        width: 80%;
-        height: 75px;
-        float: left;
-    }
-    .caidananniu{
-        width: 10%;
-        height: 75px;
-        float: left;
-    }
-    .upupzuiup{
-        width: 100%;
-        height: 75px;
-        float: left;
-    }
-    .qitaanniu{
-        width: 10%;
-        height: 75px;
-        float: left;
-    }
 }
 @media all and (max-width:1290px) and (min-width:1079px){
     .right{
@@ -137,26 +117,6 @@ a:hover{
         -webkit-backdrop-filter: blur( 4px );
         border-radius: 10px;
         border: 1px solid rgba( 255, 255, 255, 0.18 );
-    }
-    .upupzuiup-text{
-        width: 80%;
-        height: 75px;
-        float: left;
-    }
-    .caidananniu{
-        width: 10%;
-        height: 75px;
-        float: left;
-    }
-    .upupzuiup{
-        width: 100%;
-        height: 75px;
-        float: left;
-    }
-    .qitaanniu{
-        width: 10%;
-        height: 75px;
-        float: left;
     }
 }
 @media all and (max-width:1079px) and (min-width:759px){
@@ -174,26 +134,6 @@ a:hover{
     }
     .aplayer{
         display: none;
-    }
-    .upupzuiup-text{
-        width: 80%;
-        height: 75px;
-        float: left;
-    }
-    .caidananniu{
-        width: 10%;
-        height: 75px;
-        float: left;
-    }
-    .upupzuiup{
-        width: 100%;
-        height: 75px;
-        float: left;
-    }
-    .qitaanniu{
-        width: 10%;
-        height: 75px;
-        float: left;
     }
 }
 @media all and (max-width:759px) and (min-width:550px){
@@ -221,37 +161,6 @@ a:hover{
     .aplayer{
         display: none;
     }
-    .upupzuiup-text{
-        width: 80%;
-        height: 75px;
-        float: left;
-    }
-    .caidananniu{
-        width: 10%;
-        height: 75px;
-        float: left;
-    }
-    .qitaanniu{
-        width: 10%;
-        height: 75px;
-        float: left;
-    }
-    .upupzuiup{
-        width: 100%;
-        height: 75px;
-        float: left;
-    }
-}
-@media all and (max-width:1066px){
-    .qitaanniu{
-        display: none;
-    }
-    .qitaanniu:hover{
-        display: none;
-    }
-    .qitaanniu:active{
-        display: none;
-    }
 }
 @media all and (max-width:550px){
     .urlimg{
@@ -277,119 +186,6 @@ a:hover{
     .aplayer{
         display: none;
     }
-    .upupzuiup-text{
-        width: 80%;
-        height: calc(10vh);
-        float: left;
-    }
-    .upupzuiup{
-        width: 100%;
-        height: calc(10vh);
-        float: left;
-    }
-    .caidananniu{
-        width: 10%;
-        height: calc(10vh - 1px);
-        float: left;
-    }
-    .qitaanniu{
-        width: 10%;
-        height: calc(10vh - 1px);
-        float: left;
-    }
-}
-@media all and (max-height:695px){
-    .upupzuiup-text{
-        width: 80%;
-        height: calc(10vh);
-        float: left;
-    }
-    .upupzuiup{
-        width: 100%;
-        height: calc(10vh);
-        float: left;
-    }
-    .caidananniu{
-        width: 10%;
-        height: calc(10vh - 1px);
-        float: left;
-    }
-    .qitaanniu{
-        width: 10%;
-        height: calc(10vh - 1px);
-        float: left;
-    }
-}
-@media all and (max-height:411px){
-    .upupzuiup-text{
-        font-size:20px;
-    }
-}
-.upupzuiup-text{
-    text-align: center;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    font-size:25px;
-}
-.upupzuiup{
-    background-color: rgba(147, 242, 255, 0.596);
-    border: 2px solid rgba(255, 255, 255, 0.61);
-    border-radius: 10px;
-}
-.caidananniu{
-    background-color: rgba(147, 242, 255, 0.596);
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    font-size:18px;
-}
-.qitaanniu{
-    background-color: rgba(147, 242, 255, 0.596);
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    font-size:18px;
-}
-.caidananniu:hover{
-    background-color: rgba(147, 242, 255, 0.438);
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    font-size:18px;
-}
-.qitaanniu:active{
-    background-color: rgba(147, 242, 255, 0.377);
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    font-size:18px;
-}
-.qitaanniu:hover{
-    background-color: rgba(147, 242, 255, 0.438);
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    font-size:18px;
-}
-.caidananniu:active{
-    background-color: rgba(147, 242, 255, 0.377);
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    font-size:18px;
 }
 .noscript{
     text-align: center;
@@ -416,4 +212,23 @@ a:hover{
     background-color: #fdfdfdc0;
     border: 2px solid rgb(151, 151, 151);
     border-radius: 20px;
+}
+.headlist{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    background-color: rgb(235, 235, 235);
+    border-radius: 5px;
+}
+.headlistxuan{
+    float: left;
+}
+.caidananniu{
+    display: block;
+    color: rgb(22, 22, 22);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    border-radius: 5px;
 }
