--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,7 @@ a:hover{
     align-items:center;
     font-size:25px;
 }
+.caidananniu:hover{
+    color: rgb(3, 3, 3);
+    background-color: rgb(238, 238, 238);
+}
