--- a/css/style.css
+++ b/css/style.css
@@ -243,3 +243,7 @@ a:hover{
     color: rgb(3, 3, 3);
     background-color: rgb(238, 238, 238);
 }
+.caidananniu:hover{
+    color: rgb(3, 3, 3);
+    background-color: rgb(207, 207, 207);
+}
