--- a/css/style.css
+++ b/css/style.css
@@ -234,8 +234,8 @@ a:hover{
 }
 .upupzuiup-text{
     text-align: center;
-    position: relative;
-    top: 50%;
+    padding: 0;
+    margin: 0;
     font-size: 25px;
 }
 .caidananniu:hover{
