--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ a:hover{
         display: none;
     }
 }
-@media all and (min-width:1435px){
+@media all and (max-width:1435px){
     .headlistxuan{
         height: 25px;
     }
