--- a/static/css/qita.css
+++ b/static/css/qita.css
@@ -8,10 +8,7 @@
     overflow-y: scroll;
 }
 .shuoshuo2{
-    width: 299px;
-    /*这两行代码可以解决大部分场景下的换行问题*/
-    word-break: break-all;
-    word-wrap: break-word;
-    /*但在有些场景中，还需要加上下面这行代码*/
-    white-space: normal;
+    white-space:normal;
+    word-break:break-all;
+    overflow:hidden;
 }
