--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,7 +86,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
 }
 
 .article-title:hover {
-    color: #fb7299;
+    color: #2cd3f1;
 }
 
 .background-layer {
@@ -225,7 +225,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
 }
 
 .footer-container a {
-    color: #fb7299;
+    color: #2cd3f1;
 }
 
 .info-container {
@@ -236,7 +236,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
 .link-icon {
     width: 100%;
     height: 64px;
-    color: #fb7299;
+    color: #2cd3f1;
     padding: 8px 0;
     box-sizing: border-box;
 }
@@ -326,7 +326,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
     width: 100%;
     height: 64px;
     position: absolute;
-    background-color: #fb7299;
+    background-color: #2cd3f1;
 }
 
 .self-wrapper {
