--- a/static/css/main.css
+++ b/static/css/main.css
@@ -236,7 +236,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
 .link-icon {
     width: 100%;
     height: 64px;
-    color: #2cd3f1;
+    color: #0066ff;
     padding: 8px 0;
     box-sizing: border-box;
 }
