--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,7 +86,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
 }
 
 .article-title:hover {
-    color: #2cd3f1;
+    color: #2cb9f1;
 }
 
 .background-layer {
@@ -225,7 +225,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
 }
 
 .footer-container a {
-    color: #2cd3f1;
+    color: #2cb9f1;
 }
 
 .info-container {
@@ -326,7 +326,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
     width: 100%;
     height: 64px;
     position: absolute;
-    background-color: #2cd3f1;
+    background-color: #2cb9f1;
 }
 
 .self-wrapper {
@@ -382,7 +382,7 @@ body.locked, .content-container, .self-wrapper, .article-title {
 
 @keyframes spinner-fill {
     0% {
-        stroke: #2cd3f1;
+        stroke: #2cb9f1;
         stroke-width: 8;
         transform: scale(1);
         stroke-dasharray: 351;
