--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -41,7 +41,7 @@
 
 .loading-indicator .circle-line {
     fill: none;
-    stroke: #fb7299;
+    stroke: #2cb9f1;
     stroke-width: 8;
     stroke-dasharray: 351;
     transform-origin: center center;
