--- a/static/css/qita.css
+++ b/static/css/qita.css
@@ -3,9 +3,11 @@
 }
 .info-container{
     overflow-y: scroll;
+    scrollbar-width: 10px;
 }
 .links-container{
     overflow-y: scroll;
+    scrollbar-width: 10px;
 }
 .shuoshuo2{
     width: 299px;
@@ -15,4 +17,5 @@
 .article-container{
     overflow-y: scroll;
     overflow-x: hidden;
+    scrollbar-width: 10px;
 }
