--- a/static/css/main.css
+++ b/static/css/main.css
@@ -253,6 +253,17 @@ body.locked, .content-container, .self-wrapper, .article-title {
     border-radius: 5px;
     box-sizing: border-box;
     text-decoration-line: none;
+    border:0px white;
+}
+
+.link-item-button {
+    float: left;
+    width: 33.3%;
+    color: #333;
+    padding: 10px 0;
+    border-radius: 5px;
+    box-sizing: border-box;
+    text-decoration-line: none;
 }
 
 .link-item:hover {
