--- a/static/css/qita.css
+++ b/static/css/qita.css
@@ -46,6 +46,14 @@
 .link-item-button:hover {
     background: rgba(0, 0, 0, .05);
     cursor: pointer;
+    float: left;
+    width: 33.3%;
+    color: #333;
+    padding: 10px 0;
+    border-radius: 5px;
+    box-sizing: border-box;
+    text-decoration-line: none;
+	border: 0px white;
 }
 
 .link-item-button{
