--- a/static/css/qita.css
+++ b/static/css/qita.css
@@ -16,7 +16,7 @@
     scrollbar-width: none;
 }
 .links-container{
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: none;
 }
 .shuoshuo2{
