--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,6 @@ a:hover{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgb(95, 95, 95);
+    background-color: #414040;
     color: rgb(207, 207, 207);
 }
