--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,14 +37,91 @@ a:hover{
 @media screen and (max-width:550px){
     .box{width: 90%; }
 }
+@media screen and (max-height:675px){
+    .button{
+        height: 45px;
+        width: 70px;
+        position: fixed;
+        bottom: 20px;
+        right: 25px;
+    }
+    .button2{
+        height: 45px;
+        width: 170px;
+        position: fixed;
+        bottom: 20px;
+        left: 25px;
+    }
+    .button3{
+        height: 45px;
+        width: 170px;
+        position: fixed;
+        bottom: 20px;
+        left: 200px;
+    }
+}
+@media screen and (max-height:792px){
+    .button2{
+        display: none;
+    }
+    .button3{
+        display: none;
+    }
+}
+@media screen and (min-height:675px){
+    .button{
+        height: 45px;
+        width: 70px;
+        position: fixed;
+        bottom: 20px;
+        right: 25px;
+    }
+    .button2{
+        height: 45px;
+        width: 150px;
+        position: fixed;
+        bottom: 20px;
+        left: 25px;
+    }
+    .button3{
+        height: 45px;
+        width: 150px;
+        position: fixed;
+        bottom: 20px;
+        left: 200px;
+    }
+}
 .center{
     text-align: center;
 }
-.footer{
+.center2{
+    text-align: center;
+    position: absolute;
+	left: 50%;   
+	top:50%;
+    bottom: 0;
+    top: 52.5%;      
+	transform:translate(-50%,-50%);
+}
+.button{
+    background-color: rgb(196, 196, 196);
+}
+.button2{
+    background-color: rgb(196, 196, 196);
+}
+.button3{
+    background-color: rgb(196, 196, 196);
+}
+.morethings{
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #464545;
-    color: rgb(207, 207, 207);
+    height: calc(10% + 120px);
+    width: 100%;
+    background-color: rgb(109, 109, 109);
+}
+.ablack{
+    color: black;
+}
+.ablack:hover{
+    color: rgb(15, 15, 15);
 }
