--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,6 @@ a:hover{
     text-decoration: underline;
 }
 .mainbox{
-    background-color: rgb(241, 241, 241);
     position: absolute;
     top: 50%;
     left: 26%;
@@ -15,25 +14,27 @@ a:hover{
     height: 75%;
     width: 45%;
     display: flex;
-    border-radius:9px;
-    border-style: solid;
-    border-width:2px;
-    border-color:#cfcfcf;
-    padding: 4px;
 }
 .mainbox2{
-    background-color: rgb(241, 241, 241);
     position: absolute;
-    top: 50%;
+    top: 26%;
     left: 74%;
     transform: translate(-50%,-50%);
-    height: 75%;
+    height: 40%;
     width: 45%;
     display: flex;
     border-radius:9px;
-    border-style: solid;
-    border-width:2px;
-    border-color:#cfcfcf;
+    padding: 4px;
+}
+.mainbox3{
+    position: absolute;
+    top: 70%;
+    left: 74%;
+    transform: translate(-50%,-50%);
+    height: 40%;
+    width: 45%;
+    display: flex;
+    border-radius:9px;
     padding: 4px;
 }
 .fmkliheadpage{
@@ -44,9 +45,15 @@ a:hover{
     top: 25%;
     left: -100%;
 }
+.copy{
+    position: absolute;
+    bottom: 0;
+    left: 20%;
+
+}
 .jianjie{
     position: absolute;
-    top: 5%;
+    top: 35%;
     left: 43%;
 }
 .name{
@@ -58,12 +65,15 @@ html{
     justify-content: center;
     margin: 0;
 }
-@media screen and (min-width: 900px){
+@media screen and (min-width: 1200px){
     .mainbox{
         width: 410px;
     }
     .mainbox2{
-        width: 410px;
+        width: 552px;
+    }
+    .mainbox3{
+        width: 552px;
     }
 }
 @media screen and (max-width: 480px){
@@ -74,10 +84,25 @@ html{
         width: 90%;
     }
     .mainbox2{
-        height: 42.5%;
+        height: 32.5%;
         width: 90%;
-        top: 68.5%;
+        top: 37%;
         left: 50%;
+    }
+    .mainbox3{
+        height: 32.5%;
+        width: 90%;
+        top: 73.5%;
+        left: 50%;
+    }
+    .jianjie{
+        top:5%;
+    }
+    .copy{
+        position: absolute;
+        top: 0;
+        left: 25%;
+    
     }
 }
 .links{
@@ -95,8 +120,8 @@ html{
 }
 .openfooter{
     position: absolute;
-    bottom: 1%;
-    left: 10%;
+    top: 100%;
+    left: 8%;
     background-color: #cfcfcf;
     width: 80%;
     height: 30px;
@@ -105,16 +130,6 @@ html{
     padding: 2px;
 }
 @media screen and (max-height: 650px){
-    .fmkliheadpage{
-        position: absolute;
-        top: 10%;
-        left: -100%;
-    }
-    .jianjie{
-        position: absolute;
-        top: 1%;
-        left: 43%;
-    }
     .Abouts{
         z-index: 1;
         width: 80%;
@@ -131,13 +146,4 @@ html{
 .linkbutton{
     width: 40px;
     background-color: rgb(228, 228, 228);
-}
-.footer{
-    position: absolute;
-    bottom: 0;
-    height: calc(20% + 40px);
-    width: calc(100% - 15px);
-    background-color: rgb(233, 233, 233);
-    border-radius:5px;
-    padding: 3px;
 }
